Fix error convert when get all product of shopping cart